# autodp_backend

./: .env.dev  .env.example  .env.prod  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: tests_workflow.yaml
alembic/: apply_migrations.sh  env.py
alembic/versions/: 10b122d7453c_create_users_table.py  154b6b3f2c16_create_posts.py  1744c4736c80_create_users_table.py  638af974e16f_create_super_user.py  7761721be131_adding_user_model.py  7cfe414c348e_create_default_avatar.py  83ea0581b6db_create_images.py  99d9e8ba1d28_create_roles.py  bbc8f9219dc8_add_join_date_column_to_user.py
src/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  redis.py  security.py  utils.py
src/auth/: models.py  router.py  schemas.py  services.py
src/routers/: __init__.py  auth.py  post.py  role.py  user.py
src/schemas/: auth.py  image.py  post.py  role.py  user.py
src/services/: image.py  post.py  role.py  user.py
tests/: conftest.py
tests/auth/: schemas.py  test_auth.py
tests/users/: schemas.py  test_base_url.py  test_create_user.py  test_delete_user.py  test_read_user.py  test_update_user.py
